[package]
name = "spark-ar-killer"
version = "0.1.0"
authors = ["KimByungChan <margintop3498@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
wio = "0.2.2"
regex = "1"
winapi = { version = "0.3", features = ["handleapi", "minwindef", "tlhelp32", "processthreadsapi"] }
lazy_static = "1.4.0"
