[package]
name = "spark-ar-killer"
version = "0.1.0"
authors = ["KimByungChan <margintop3498@icloud.com>"]
edition = "2018"
build = "build.rs"

[dependencies]

[target.'cfg(windows)'.dependencies]
wio = "0.2.2"
regex = "1"
winapi = { version = "0.3", features = ["handleapi", "minwindef", "tlhelp32", "processthreadsapi"] }
lazy_static = "1.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"